# datachat

./: CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 018_add_query_indexes.py  019_add_app_settings.py
backend/app/: main.py
backend/app/api/: conversations.py  demo.py  settings.py
backend/app/connections/: bigquery.py  local_duckdb_persistent.py  motherduck.py  postgres.py  redshift.py  snowflake.py
backend/app/core/: config.py  dependencies.py  rate_limit.py
backend/app/models/: __init__.py  app_setting.py
backend/app/schemas/: settings.py
backend/app/services/: chat_service.py  mcp_client.py  scheduler_service.py  settings_service.py  warehouse_service.py
backend/changelogs/: 2026-05-11-anthropic-key-setup-and-hardening.md  2026-05-11-backend-misc-hardening.md  2026-05-11-chat-perf-hardening.md  2026-05-11-cors-jwt-hardening.md  2026-05-11-email-escape-and-indexes.md  2026-05-11-frontend-hardening.md  2026-05-11-in-app-anthropic-key.md  2026-05-11-ops-hardening.md  2026-05-11-prod-safety-gates.md  2026-05-11-schema-query-parameterization.md
backend/tests/: conftest.py  test_chat_service.py  test_config.py  test_connections.py  test_cors_and_jwt.py  test_demo_consulting.py  test_executor_sql_injection.py  test_local_duckdb_path.py  test_runtime_config_check.py  test_scheduler_lock.py  test_settings_anthropic_key.py  test_warehouse_service.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnthropicKeyCard.tsx  ErrorBoundary.tsx  MissingAnthropicKeyBanner.tsx
(+3 files in other folders)
