[project]
name = "datachat-backend"
version = "0.1.0"
description = "AI-powered analytics backend for Datachat"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.34.0",
    "pydantic>=2.8.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "cryptography==41.0.7",
    "httpx>=0.27.1",
    "python-dateutil>=2.8.2",
    "PyJWT>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "google-auth>=2.25.0",
    "requests>=2.31.0",
    "duckdb==1.4.1",
    "tabulate>=0.9.0",
    "snowflake-connector-python>=3.6.0",
    "redshift-connector>=2.1.0",
    "boto3>=1.34.0",
    "alembic>=1.18.4",
    "stripe>=8.0.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.6",
    "python-frontmatter>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
